# InferenceAttackLocationData

./: .gitignore  README.md  bit-vector-efficiency.txt  eff_bit_vector.py  hidden_markov_model.py  hist_from_dict.py  memoization.py  pa_diff.py  plot_geolife.py  plot_grid.py  pyproject.toml  taxi.py  test.py  test2.py  test3.py
LDP/: HiddenMarkovModel.py  __init__.py  estimation_different_grid.py  estimation_hybrid_grid.py  estimation_same_grid.py  helper.py  lh_client.py  lh_server.py  protocols.py  protocols_estimation.py  protocols_estimation_different_grid.py  protocols_estimation_same_grid.py
LDP/protocols/: GRR.py  HBV.py  OLH.py  OUE.py  RAPPOR.py  __init__.py
dataset/: create_stationary_grid.py  dataset_analysis.py  helper.py  plot_grid.py
dataset/analysis/: dataset_analysis.py
dataset/brinkhoff/: brinkhoff_grids.py  test.py
dataset/geolife/: geolife_grids.py  pre_process_geolife.py  test.py
dataset/taxi/: taxi_grids.py  test.py
experiment/attack/: README.md  __init__.py  metrics.py
grid/: brinkhoff_grids.py  geolife_grids.py  taxi_grids.py
hidden_markov_model/: HMM.py  __init__.py  helper.py  hidden_markov_model.py
metric/: path_distance.py
run/different_grid/: epsilon_value_test.py
run/same_grid/: epsilon_value_test.py
test/: domain_size_test.py  epsilon_value_test.py  same_grid_value_test.py
test/different_grid/: differet_trajectory_length_plot.py  epsilon_value_test.py
test/hybrid/: epsilon_value_test.py
test/same_grid/: Cross Attack Experiment.py  differet_trajectory_length_plot.py  domain_size_test.py  epsilon_value_test.py  (+1 more)
(+404 files in other folders)
